Modification taille bouton pour taille fixe au lieu de % sinon le texte wrap et change la forme du bouton

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -164,7 +164,7 @@ body{
         font-size: 16px;
         font-weight: 500;
         margin: 30px 0 30px 0;
-        width: 40%;
+        width: 218px;
         text-decoration: none;
         color: white;
         padding: 15px;
@@ -407,8 +407,7 @@ body{
             }
         }
         &__bouton{
-            margin: 20px 0 30px 0; /*Margin bottom 50px en mobile*/       
-            width: 218px; 
+            margin: 20px 0 30px 0; /*Margin bottom 50px en mobile*/     
         }
     } 
     
